--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "time-wallet-miniapp",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --port 5173 --strictPort",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "hardhat test"
+    "deploy:contracts": "hardhat run scripts/deploy.ts --network baseSepolia",
+    "test": "hardhat test",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings 0"
   },
   "dependencies": {
-    "@lemoncash/mini-app-sdk": "latest",
+    "@lemoncash/mini-app-sdk": "^0.1.3",
     "dayjs": "^1.11.10",
-    "framer-motion": "^11.0.0",
+    "ethers": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.3",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.6",
-    "hardhat": "^2.22.0",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@types/node": "^20.11.14"
+    "dotenv": "^16.3.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "hardhat": "^2.19.2",
+    "prettier": "^3.1.1",
+    "typescript": "^5.4.2",
+    "vite": "^5.0.5"
   }
 }
