--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
 "moduleResolution": "Node",
 "strict": true,
 "esModuleInterop": true,
+"jsx": "react-jsx",
 "outDir": "dist",
 "types": ["vite/client"]
 },
