--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,5 +17,7 @@
 "vite": "^5.2.0",
 "vite-plugin-lit-css": "^1.0.0",
 "tailwindcss": "^3.4.4"
+"vite": "^4.4.0",
+"vite-plugin-lit-css": "^1.0.2",
 }
 }
