--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "lit": "^3.1.0",
     "viem": "^2.11.0",
-    "wagmi": "^2.6.0"
+    "wagmi": "^2.6.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.1.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
-    "vite": "^4.4.0",
-    "vite-plugin-lit-css": "^1.0.2",
-    "tailwindcss": "^3.4.0"
+    "vite": "^4.5.0",
+    "vite-plugin-lit-css": "^1.0.2"
   }
 }
