--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,25 +4,25 @@
   "private": true,
 
   "scripts": {
-    "dev":   "vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
 
   "dependencies": {
     "lit": "^3.1.0",
-    "viem": "^2.11.0",
-    "wagmi": "^2.6.0",
+    "lucide-react": "^0.276.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "lucide-react": "^0.276.0"         
+    "viem": "^2.11.0",
+    "wagmi": "^2.6.0"
   },
 
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.1.0",
+    "@vitejs/plugin-react": "^3.3.2",       // 🔹 plugin-react para Vite 4
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
-    "vite": "^5.0.0",
+    "vite": "^4.5.14",                      // 🔹 downgrade
     "vite-plugin-lit-css": "^1.0.2"
   }
 }
