--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,11 @@
   "name": "time-wallet-gui",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-
   "dependencies": {
     "lit": "^3.1.0",
     "lucide-react": "^0.276.0",
@@ -17,12 +15,11 @@
     "viem": "^2.11.0",
     "wagmi": "^2.6.0"
   },
-
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.3.2",       // 🔹 plugin-react para Vite 4
+    "@vitejs/plugin-react": "^3.3.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
-    "vite": "^4.5.14",                      // 🔹 downgrade
+    "vite": "^4.5.14",
     "vite-plugin-lit-css": "^1.0.2"
   }
 }
